add helpful links

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
                 </ul>
             </ul>
         </div>
+        <div class = "resources">
+            <h2>Helpful Resources: Learn More about <code>div</code>s and <code>span</code>s</h2>
+            <ul>
+                <li><a href="http://www.w3schools.com/html/html_blocks.asp">w3schools</a></li>
+                <li><a href="http://htmldog.com/guides/html/intermediate/spandiv/">htmldog</a></li>
+                <li><a href="http://www.goer.org/HTML/intermediate/div_and_span/">goer</a></li>
+            </ul>
+        </div>
 
     </div>
 </body>
